# origami

./: INSTALL  Makefile  Makefile.in  README.md  configure.ac  estimate-interaction-counts.r  run-hypergeometric.r  run-model.r
scripts/: binned-genome.pl  convert-to-washu-format.pl  downsample-bam-file.pl  estimate-counts.pl  estimate-global-bayesian-mixture.r  estimate-interaction-counts.r  estimate-pet-statistics.r  estimate-significance.r  estimate-two-component-bayesian-mixture.r  extract-anchors.pl  extract-hanging-pairs.pl  extract-sam-header.pl  hypergeometric-test.r  make-chip-profile.r  make-trimmed-reads-stat-report.pl  peaks-zscore.r  per-sample-bayesian.r  reassign-anchors.pl  remove-duplicates.pl  update-stat-file.pl
simulation/: run-chiapet-simulation.r
src/: bam-read-extension.cpp  mapped-reads-merge.cpp
test/ablinker-test/: left-test.fq  right-test.fq
test/test-run/: left-test.fq  left-test.fq.bz2  right-test.fq  right-test.fq.bz2
